Fixed regression by #15381 on IE8
The opacity for disabled menu items looks very ugly on IE8.
Fixed by using the previous gray color for text and opacity
filter only for the item icon.

--- a/WebContent/VAADIN/themes/base/menubar/menubar.scss
+++ b/WebContent/VAADIN/themes/base/menubar/menubar.scss
@@ -56,7 +56,16 @@
 .#{$primaryStyleName} span.#{$primaryStyleName}-menuitem-disabled:active {
 	opacity: .5;
 	filter: alpha(opacity=50);
+	
+	.v-ie8 & {
+		filter: none;
+		color: #999;
+		img {
+			filter: alpha(opacity=50);
+		}
+	}
 }
+
 .#{$primaryStyleName}-more-menuitem {
 	/* Arial has the most coverage for geometric entity characters */
 	font-family: arial, helvetica, sans-serif;
